# cargo-thanku

./: .gitignore  Cargo.toml  LICENSE.md  README.md  README_CN.md  THANKU.md  reference.md  thanks.md
.github/workflows/: ci.yml
assets/output/: THANKU_en.csv  THANKU_list_en.md  THANKU_list_origin_zh.md  THANKU_list_parsed.md  THANKU_table_en.md  THANKU_table_origin.md
assets/output/converted/: THANKU_en.json  THANKU_en.toml  THANKU_en.yaml  THANKU_en_mt.md
locales/: app.yml
src/: cli.rs  config.rs  errors.rs  main.rs  output.rs  sources.rs  travert.rs
