[package]
name = "cargo-thanku"
version = "0.1.0"
edition = "2024"
authors = ["unic <yuniqueunic@gmail.com>"]
description = "A cargo cli tool to thank your dependencies and generate a thank you structure text"
categories = [
    "acknowledgement",
    "thanks",
    "development-tools",
    "cli-tools",
    "dependencies",
]
keywords = ["cargo", "cli", "thank", "acknowledgement", "dependencies"]
license = "MIT"
repository = "https://github.com/yuniqueunic/cargo-thanku"


[dependencies]
anyhow = "1"
cargo_metadata = "0.19.2"
clap = "4"
reqwest = { version = "0.12.14", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
toml = "0.8.20"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
url = "2"
