[package]
name = "cargo-thanku"
version = "0.3.1"
edition = "2024"
authors = ["unic <yuniqueunic@gmail.com>"]
description = "Generate acknowledgments for your Rust project dependencies"
categories = [
    "development-tools",
    "command-line-utilities",
    "development-tools::cargo-plugins",
]
keywords = ["cargo", "cli", "thanks", "acknowledgements", "dependencies"]
license = "MIT"
repository = "https://github.com/yuniqueunic/cargo-thanku"
readme = "README.md"


[dependencies]
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["cargo", "env"] }
clap_complete = "4.5"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
url = { version = "2.5", features = ["serde"] }
cargo_metadata = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-i18n = "3.1.3"
strsim = "0.11.1"
serde_yaml = "0.9.34"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
assert_fs = "1.1.2"
